# raytracer

./: .gitignore  BVHNode.cpp  BVHNode.h  Bounds.cpp  Bounds.h  CMakeLists.txt  Camera.cpp  Camera.h  Denoiser.cpp  Denoiser.h  Hit.cpp  Hit.h  Image.cpp  Image.h  Interval.cpp  Interval.h  Material.cpp  Material.h  Ray.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vector3.cpp  Vector3.h  Window.cpp  Window.h  main.cpp  utils.h  vcpkg.json
Lights/: Light.cpp  Light.h  PointLight.cpp  PointLight.h
Objects/: AAB.cpp  AAB.h  Model.cpp  Model.h  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h
Scenes/: BvhTestScene.cpp  BvhTestScene.h  CornellBoxScene.cpp  CornellBoxScene.h  ManyBallsScene.cpp  ManyBallsScene.h  MatTestScene.cpp  MatTestScene.h  TestScene2.cpp  TestScene2.h  VolumeTestScene.cpp  VolumeTestScene.h
Types/: Bounds.cpp  Bounds.h  Hit.cpp  Hit.h  Interval.cpp  Interval.h  Ray.h  Transform.cpp  Transform.h  Vector3.cpp  Vector3.h  Window.cpp  Window.h  simd_utils.cpp  simd_utils.h
materials/: Dielectric.cpp  Dielectric.h  Emissive.cpp  Emissive.h  Lambertian.cpp  Lambertian.h  Material.cpp  Material.h  Metallic.cpp  Metallic.h  VolumeTest.cpp  VolumeTest.h
